# use_case_titanic

./: .dockerignore  .gitignore  Dockerfile  Untitled-1.ipynb  pyproject.toml
.code_quality/: .pylintrc
.dvc/: config
src/app/data/: data.py  generate_dataset.ipynb
src/app/data/datasets/: test.csv.dvc  titanic.csv.dvc  train.csv.dvc
src/app/data/src/app/data/datasets/: test.csv  train.csv
src/app/deployment/: api.py  streamlit_aplication.py
src/app/deployment/fastapi/: api.py
src/app/deployment/streamlit/: streamlit_aplication.py
src/app/deplyment/: api.py
src/app/model/: model.py  optimize.py  optimize_model.py  train.py
