[project]
name = "use_case_titanic"
version = "0.1.0"
description = "Applyed MLOps to titanic use case"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "dvc>=3.61.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "mlflow>=3.1.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
